Closed Bug 387964 Opened 18 years ago Closed 18 years ago

nsTextFrameThebes misuses memset

Categories

(Core :: Layout, defect)

All
AIX
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Unassigned)

Details

Attachments

(1 file)

Attached patch CleanupSplinter Review
No description provided.
Attachment #272091 - Flags: superreview?(roc)
Attachment #272091 - Flags: review?(roc)
Attachment #272091 - Flags: superreview?(roc)
Attachment #272091 - Flags: superreview+
Attachment #272091 - Flags: review?(roc)
Attachment #272091 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: