nsTextFrameThebes ClusterIterator misuses memset plus cleanup b=387964 r+sr=roc